--- a/beholder-recorder/beholder/webapp/templates/navigation.jinja2
+++ b/beholder-recorder/beholder/webapp/templates/navigation.jinja2
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid center navbar-collapse">
     <ul class="nav navbar-nav">
-      <li><a href="/">Cameras</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/cameras">Cameras</a></li>
       <li><a href="/calendar">Calendar</a></li>
       <li><a href="/settings">Stats & Settings</a></li>
     </ul>
