--- a/beholder-recorder/beholder/webapp/templates/navigation.jinja2
+++ b/beholder-recorder/beholder/webapp/templates/navigation.jinja2
@@ -5,6 +5,7 @@
       <li><a href="/cameras">Cameras</a></li>
       <li><a href="/calendar">Calendar</a></li>
       <li><a href="/settings">Stats & Settings</a></li>
+      <li><a href="/log">Recorder Log</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <button class="btn btn-default navbar-btn"><a href="/logout">Logout</a></button>
