--- a/beholder-recorder/beholder/webapp/home/templates/index.jinja2
+++ b/beholder-recorder/beholder/webapp/home/templates/index.jinja2
@@ -37,7 +37,7 @@
           <div class="panel-heading">Video</div>
           <div class="panel-body">
             <video style="max-width: 100%" controls>
-              <source src="${video}">
+              <source src="${video}?t=${new Date()}">
             </video>
           </div>
         </div>
@@ -49,7 +49,7 @@
           <div class="panel-heading">Audio</div>
           <div class="panel-body">
             <audio style="max-width: 100%" controls>
-              <source src="${audio}">
+              <source src="${audio}?t=${new Date()}">
             </audio>
           </div>
         </div>
